<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>TouchScreen</class>
 <widget class="QDialog" name="TouchScreen">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>800</width>
    <height>480</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Dialog</string>
  </property>
  <widget class="QTabWidget" name="tabWidget">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>800</width>
     <height>480</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
     <width>800</width>
     <height>0</height>
    </size>
   </property>
   <property name="palette">
    <palette>
     <active>
      <colorrole role="Mid">
       <brush brushstyle="SolidPattern">
        <color alpha="255">
         <red>194</red>
         <green>198</green>
         <blue>189</blue>
        </color>
       </brush>
      </colorrole>
     </active>
     <inactive>
      <colorrole role="Mid">
       <brush brushstyle="SolidPattern">
        <color alpha="255">
         <red>194</red>
         <green>198</green>
         <blue>189</blue>
        </color>
       </brush>
      </colorrole>
     </inactive>
     <disabled>
      <colorrole role="Mid">
       <brush brushstyle="SolidPattern">
        <color alpha="255">
         <red>194</red>
         <green>198</green>
         <blue>189</blue>
        </color>
       </brush>
      </colorrole>
     </disabled>
    </palette>
   </property>
   <property name="font">
    <font>
     <family>Times New Roman</family>
     <pointsize>16</pointsize>
     <weight>75</weight>
     <bold>true</bold>
    </font>
   </property>
   <property name="styleSheet">
    <string notr="true">QTabBar::tab { height: 70px; width: 400px; }</string>
   </property>
   <property name="tabShape">
    <enum>QTabWidget::Rounded</enum>
   </property>
   <property name="currentIndex">
    <number>0</number>
   </property>
   <property name="iconSize">
    <size>
     <width>40</width>
     <height>23</height>
    </size>
   </property>
   <property name="elideMode">
    <enum>Qt::ElideNone</enum>
   </property>
   <property name="tabBarAutoHide">
    <bool>false</bool>
   </property>
   <widget class="QWidget" name="tab">
    <property name="font">
     <font>
      <family>Comic Sans MS</family>
      <pointsize>16</pointsize>
     </font>
    </property>
    <property name="autoFillBackground">
     <bool>true</bool>
    </property>
    <attribute name="title">
     <string>MainMenu</string>
    </attribute>
    <widget class="QPushButton" name="TurnOffBtn">
     <property name="geometry">
      <rect>
       <x>20</x>
       <y>40</y>
       <width>371</width>
       <height>321</height>
      </rect>
     </property>
     <property name="styleSheet">
      <string notr="true">#TurnOffBtn {
background-color: transparent;
border-image: url(:MyFiles/PowerOff.gif);
background: none;
border: none;
background-repeat: none;
}
</string>
     </property>
     <property name="text">
      <string/>
     </property>
    </widget>
    <widget class="QPushButton" name="EDFAOff">
     <property name="geometry">
      <rect>
       <x>600</x>
       <y>150</y>
       <width>71</width>
       <height>61</height>
      </rect>
     </property>
     <property name="styleSheet">
      <string notr="true">#EDFAOff {
background-color: transparent;
border-image: url(:MyFiles/Red.png);
background: none;
border: none;
background-repeat: none;
}
</string>
     </property>
     <property name="text">
      <string/>
     </property>
    </widget>
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
       <x>420</x>
       <y>150</y>
       <width>141</width>
       <height>81</height>
      </rect>
     </property>
     <property name="font">
      <font>
       <family>Times New Roman</family>
       <pointsize>16</pointsize>
       <weight>75</weight>
       <bold>true</bold>
      </font>
     </property>
     <property name="text">
      <string>Amplifier:</string>
     </property>
    </widget>
    <widget class="QPushButton" name="LaserQuestOff">
     <property name="geometry">
      <rect>
       <x>600</x>
       <y>50</y>
       <width>71</width>
       <height>61</height>
      </rect>
     </property>
     <property name="styleSheet">
      <string notr="true">#LaserQuestOff {
background-color: transparent;
border-image: url(:MyFiles/Red.png);
background: none;
border: none;
background-repeat: none;
}
</string>
     </property>
     <property name="text">
      <string/>
     </property>
    </widget>
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
       <x>420</x>
       <y>40</y>
       <width>141</width>
       <height>81</height>
      </rect>
     </property>
     <property name="font">
      <font>
       <family>Times New Roman</family>
       <pointsize>16</pointsize>
       <weight>75</weight>
       <bold>true</bold>
      </font>
     </property>
     <property name="text">
      <string>Laser:</string>
     </property>
    </widget>
    <widget class="QPlainTextEdit" name="pteStatus">
     <property name="geometry">
      <rect>
       <x>400</x>
       <y>340</y>
       <width>351</width>
       <height>31</height>
      </rect>
     </property>
     <property name="mouseTracking">
      <bool>true</bool>
     </property>
    </widget>
    <widget class="QLabel" name="label_7">
     <property name="geometry">
      <rect>
       <x>420</x>
       <y>260</y>
       <width>131</width>
       <height>41</height>
      </rect>
     </property>
     <property name="font">
      <font>
       <family>Times New Roman</family>
       <pointsize>16</pointsize>
       <weight>75</weight>
       <bold>true</bold>
      </font>
     </property>
     <property name="text">
      <string>Stable:</string>
     </property>
    </widget>
    <widget class="QPushButton" name="StableOn">
     <property name="geometry">
      <rect>
       <x>600</x>
       <y>250</y>
       <width>71</width>
       <height>61</height>
      </rect>
     </property>
     <property name="styleSheet">
      <string notr="true">#StableOn {
background-color: transparent;
border-image: url(:MyFiles/Green.png);
background: none;
border: none;
background-repeat: none;
}
</string>
     </property>
     <property name="text">
      <string/>
     </property>
    </widget>
    <widget class="QPushButton" name="LaserQuestOn">
     <property name="geometry">
      <rect>
       <x>600</x>
       <y>50</y>
       <width>71</width>
       <height>61</height>
      </rect>
     </property>
     <property name="styleSheet">
      <string notr="true">#LaserQuestOn {
background-color: transparent;
border-image: url(:MyFiles/Green.png);
background: none;
border: none;
background-repeat: none;
}
</string>
     </property>
     <property name="text">
      <string/>
     </property>
    </widget>
    <widget class="QPushButton" name="EDFAOn">
     <property name="geometry">
      <rect>
       <x>600</x>
       <y>150</y>
       <width>71</width>
       <height>61</height>
      </rect>
     </property>
     <property name="styleSheet">
      <string notr="true">#EDFAOn {
background-color: transparent;
border-image: url(:MyFiles/Green.png);
background: none;
border: none;
background-repeat: none;
}
</string>
     </property>
     <property name="text">
      <string/>
     </property>
    </widget>
    <widget class="QPushButton" name="StableOff">
     <property name="geometry">
      <rect>
       <x>600</x>
       <y>250</y>
       <width>71</width>
       <height>61</height>
      </rect>
     </property>
     <property name="styleSheet">
      <string notr="true">#StableOff {
background-color: transparent;
border-image: url(:MyFiles/Red.png);
background: none;
border: none;
background-repeat: none;
}
</string>
     </property>
     <property name="text">
      <string/>
     </property>
    </widget>
    <widget class="QPushButton" name="TurnOnBtn">
     <property name="geometry">
      <rect>
       <x>20</x>
       <y>40</y>
       <width>371</width>
       <height>321</height>
      </rect>
     </property>
     <property name="styleSheet">
      <string notr="true">#TurnOnBtn {
background-color: transparent;
border-image: url(:MyFiles/PowerOn.gif);
background: none;
border: none;
background-repeat: none;
}
</string>
     </property>
     <property name="text">
      <string/>
     </property>
    </widget>
    <zorder>TurnOnBtn</zorder>
    <zorder>TurnOffBtn</zorder>
    <zorder>EDFAOn</zorder>
    <zorder>LaserQuestOn</zorder>
    <zorder>EDFAOff</zorder>
    <zorder>label_2</zorder>
    <zorder>LaserQuestOff</zorder>
    <zorder>label</zorder>
    <zorder>pteStatus</zorder>
    <zorder>label_7</zorder>
    <zorder>StableOn</zorder>
    <zorder>StableOff</zorder>
   </widget>
   <widget class="QWidget" name="tab_2">
    <property name="autoFillBackground">
     <bool>true</bool>
    </property>
    <attribute name="title">
     <string>Settings:</string>
    </attribute>
    <widget class="QPushButton" name="pushButton">
     <property name="geometry">
      <rect>
       <x>580</x>
       <y>290</y>
       <width>181</width>
       <height>101</height>
      </rect>
     </property>
     <property name="font">
      <font>
       <family>Comic Sans MS</family>
       <pointsize>10</pointsize>
       <weight>75</weight>
       <bold>true</bold>
      </font>
     </property>
     <property name="text">
      <string>Save as Default</string>
     </property>
    </widget>
    <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
       <x>70</x>
       <y>40</y>
       <width>651</width>
       <height>252</height>
      </rect>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout">
      <item>
       <layout class="QHBoxLayout" name="horizontalLayout_2">
        <item>
         <widget class="QLabel" name="label_3">
          <property name="font">
           <font>
            <family>Times New Roman</family>
            <pointsize>16</pointsize>
            <weight>75</weight>
            <bold>true</bold>
           </font>
          </property>
          <property name="text">
           <string>Power:</string>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QDoubleSpinBox" name="doubleSpinBox">
          <property name="font">
           <font>
            <family>Times New Roman</family>
            <pointsize>50</pointsize>
           </font>
          </property>
         </widget>
        </item>
       </layout>
      </item>
      <item>
       <layout class="QHBoxLayout" name="horizontalLayout">
        <item>
         <widget class="QLabel" name="label_5">
          <property name="font">
           <font>
            <family>Times New Roman</family>
            <pointsize>16</pointsize>
            <weight>75</weight>
            <bold>true</bold>
           </font>
          </property>
          <property name="text">
           <string>Wavelength:</string>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QDoubleSpinBox" name="doubleSpinBox_2">
          <property name="font">
           <font>
            <family>Times New Roman</family>
            <pointsize>50</pointsize>
           </font>
          </property>
         </widget>
        </item>
       </layout>
      </item>
     </layout>
    </widget>
    <zorder>layoutWidget</zorder>
    <zorder>pushButton</zorder>
   </widget>
  </widget>
 </widget>
 <resources/>
 <connections/>
</ui>
